[package]
name    = "ieee802154"
version = "0.5.0"
authors = ["Hanno Braun <hanno@braun-robotics.com>"]
edition = "2018"

description   = "Partial implementation of the IEEE 802.15.4 standard for low-rate wireless personal area networks"
documentation = "https://docs.rs/ieee802154"
repository    = "https://github.com/braun-robotics/rust-ieee802.15.4"
license       = "0BSD"
readme        = "README.md"
categories    = ["embedded", "network-programming", "no-std"]
keywords      = ["WPAN"]


[badges]
travis-ci   = { repository = "braun-robotics/ieee802154" }


[dependencies]
hash32        = "0.2.1"
hash32-derive = "0.1"
byte = "0.2.4"

[dependencies.ccm]
version          = "0.3.0"
default-features = false

[dependencies.cipher]
version          = "0.2"
default-features = false


[dev-dependencies]
rand = "0.8.3"

[dev-dependencies.aes-soft]
version          = "0.6.4"
default-features = false
