[package]
name    = "ieee802154"
version = "0.6.0"
authors = [
  "Erik Henriksson <erikhenrikssn@gmail.com>",
  "Hanno Braun <hanno@braun-robotics.com>",
  "Ryan Kurte <ryan@kurte.nz>",
]
edition = "2018"

description   = "Partial implementation of the IEEE 802.15.4 standard for low-rate wireless personal area networks"
documentation = "https://docs.rs/ieee802154"
repository    = "https://github.com/rust-iot/rust-ieee802.15.4"
license       = "0BSD"
readme        = "README.md"
categories    = ["embedded", "network-programming", "no-std"]
keywords      = ["WPAN"]

[features]

[dependencies]
hash32        = "0.2.1"
hash32-derive = "0.1"
byte = "0.2.4"
defmt = { version = ">=0.2.0,<0.4", optional = true }

[dependencies.ccm]
version          = "0.4.0"
default-features = false

[dependencies.cipher]
version          = "0.3.0"
default-features = false

[dev-dependencies]
rand = "0.8.3"

[dev-dependencies.aes]
version          = "0.8.0"
default-features = false
